Prevent text from overflowing for pending trade cards; book img smaller for new trade form

--- a/client/src/styles/cardPendingTrade.css
+++ b/client/src/styles/cardPendingTrade.css
@@ -23,11 +23,13 @@
         flex-direction: row;
         align-items: center;
         justify-content: center;
+        width: 100%;
     }
 
     .ctLeft{
         flex: 2;
         margin: 5%;
+        width: 50%;
     }
 
     .ctCenter{
@@ -52,6 +54,7 @@
         margin: 5%;
         color: white;
         font-size: 1.5em;
+        width: 50%;
     }
 
     .ptBottom{
@@ -71,6 +74,8 @@
     .ptTitle{
         margin-top: -1%;
         padding-bottom: 1%;
+        text-overflow: ellipsis;
+        overflow: hidden;
     }
 
     .cardTitle{
@@ -118,11 +123,13 @@
         flex-direction: row;
         align-items: center;
         justify-content: center;
+        width: 100%;
     }
 
     .ctLeft{
         flex: 2;
         margin: 5%;
+        width: 50%;
     }
 
     .ctCenter{
@@ -147,6 +154,7 @@
         margin: 5%;
         color: white;
         font-size: 1.5em;
+        width: 50%;
     }
 
     .ptBottom{
@@ -166,6 +174,8 @@
     .ptTitle{
         margin-top: -1%;
         padding-bottom: 1%;
+        text-overflow: ellipsis;
+        overflow: hidden;
     }
 
     .cardTitle{
