--- a/client/src/styles/form.css
+++ b/client/src/styles/form.css
@@ -86,6 +86,13 @@
     color: rgb(255, 255, 255);
 }
 
+/* search box and results */
+.ownedBookSearchAndResults {
+    height: 65%;
+    position: relative;
+    overflow: auto;
+}
+
 /* arrow for search box */
 .Select-arrow, .Select .Select-arrow-zone:hover .Select-arrow {
     border-top-color: rgb(255, 255, 255);
