--- a/client/src/styles/summary.css
+++ b/client/src/styles/summary.css
@@ -25,5 +25,5 @@
 }
 
 .imageContainer > img {
-    width: 60%;
+    width: 50%;
 }
